--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.google.com/">Website</a>
       <p id="copyright">© 2024 Behrad Adl.</p>
     </div>
 
